<resources>
    <string name="app_name">My Todo Application</string>
    <string name="no_todo">No Todo</string>

    <string name="to_do_application">MY TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_priority">High priority</string>
    <string name="priority">Priority</string>
    <string name="enter_your_task">Enter Your Task</string>
    <string name="enter_title">Enter Title</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="about_application">About Application</string>
    <string name="share">Share</string>
    <string name="delete_all">Delete All</string>
    <string name="description">Description</string>
    <string name="text">The definition is a simple one. It\'s a list of tasks you need to complete, or things that you want to do. Most typically, they\'re organised in order of priority. Traditionally, they\'re written on a piece of paper or post it notes and acts as a memory aid.</string>
    <string name="name">Sarpharaj Alam</string>
</resources>
