<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.todo.AddTask">


    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/enter_title"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTitle"
        android:gravity="start"
        android:hint="@string/enter_your_task"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="16dp" />


    <TextView
        android:id="@+id/textpriority"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTaskDescription"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/priority"
        android:textColor="@android:color/primary_text_light" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/textpriority"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/radio_box"
            android:checked="true"
            android:text="@string/high_priority"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/radiobox2"
            android:text="@string/medium"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/box3"
            android:text="@string/low"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cal"
        android:layout_below="@id/radioGroup"
        android:src="@drawable/ic_calendar"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal"
        android:id="@+id/date_edit"
        />

    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/date_edit"
        android:layout_gravity="center"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/add_task"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>